--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -1,6 +1,7 @@
 server.port=8082
+spring.application.name=ms-inventory-service
 
-ms.beer.service.host=http://localhost:8081
+ms.beer.service.host=http://localhost:9898
 
 spring.datasource.username=inventory_service
 spring.datasource.password=password
