--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8082
-ms.beer.service.host=http://localhost:8081
+spring.application.name=ms-inventory-service
+ms.beer.service.host=http://localhost:9898
 logging.level.ua.mike.micro.inventoryservice=debug
 spring.activemq.broker-url=tcp://0.0.0.0:61616
