--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -1,5 +1,6 @@
 server.port=8082
 spring.application.name=ms-inventory-service
+eureka.client.service-url.defaultZone=http://localhost:8765/eureka/
 
 spring.datasource.username=inventory_service
 spring.datasource.password=password
