--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -1,6 +1,8 @@
 server.port=8082
 spring.application.name=ms-inventory-service
 eureka.client.service-url.defaultZone=http://localhost:8765/eureka/
+#zipkin
+spring.zipkin.base-url=http://localhost:9411
 
 spring.datasource.username=inventory_service
 spring.datasource.password=password
